tests/fail/elaboration/boolean-literal/type-mismatch.fathom
//~ exit-code = 1

true : Void
